--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -144,7 +144,7 @@
                           </tr>
                       </thead>
                       <tbody>
-                        <% todaydata.forEach(function(today,ind){  %>
+                        <% nowdata.forEach(function(today,ind){  %>
                            <tr style="border: 1px solid white;">
                               <td><%= today.id %> </td>
                               <td><%= today.title %> </td>
